# ReCUm12

./: .gitignore  CMakeLists.txt  Sha-Clip-11.sh  mk-code-temp.sh
apps/recum12_app/: CMakeLists.txt
apps/recum12_app/src/: AppRuntime.cpp  AppRuntime.h  main.cpp
configs/: default_settings.json  repo_log.json  users.csv
docs/: CommandDispatcher_Integration_Guide.md  GIT-WORKFLOW.md  LogManager-Design-and-Usage-full.md  NetworkManager_Integration_Guide.md  PumpR07Protocol_Kullanim_Rehberi.md  ReCUm12-v12.01.100-RFID-Pn532Reader-Dev-Notes.txt  v12.01.100-R2-PumpR07Protocol-Base-27.11.2025-02.27-Mesaj.txt
docs/architecture/: ReCUm12-Architecture-and-Sprint-Plan-2025-11-30.md
modules/comm/: CMakeLists.txt
modules/comm/include/comm/: NetworkManager.h
modules/comm/src/: NetworkManager.cpp
modules/core/: CMakeLists.txt
modules/core/include/core/: PumpRuntimeState.h  PumpSaleTracker.h  RfidAuthController.h  UserManager.h
modules/core/src/: PumpRuntimeState.cpp  PumpSaleTracker.cpp  RfidAuthController.cpp  UserManager.cpp
modules/gui/: CMakeLists.txt
modules/gui/include/gui/: MainWindow.h  StatusMessageController.h  rs485_gui_adapter.h
modules/gui/resources/: MainWindow.glade  MainWindow12.glade  style.css  style_org.css
modules/gui/src/: MainWindow.cpp  StatusMessageController.cpp  rs485_gui_adapter.cpp
modules/hw/: CMakeLists.txt
modules/hw/include/hw/: PumpInterfaceLvl3.h  PumpR07Protocol.h
modules/hw/src/: PumpInterfaceLvl3.cpp  PumpR07Protocol.cpp
modules/net/: CMakeLists.txt
modules/net/include/net/: BlynkClient.h  CommandDispatcher.h  LineTcpClient.h  RemoteProto.h
modules/net/src/: BlynkClient.cpp  CommandDispatcher.cpp  LineTcpClient.cpp  RemoteProto.cpp
modules/rfid/: CMakeLists.txt
modules/rfid/include/rfid/: Pn532Reader.h
modules/rfid/src/: Pn532Reader.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/utils/: LogManager.h  Settings.h  Version.h
modules/utils/src/: LogManager.cpp  Settings.cpp
scripts/: Sha-Clip-22.sh  Sha-Clip-33.sh
tools/: win_pump_ctrl_rs485.py
